// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbButtonBar should add a justify class 1`] = `
Object {
  "$attrs$": Object {
    "class": "justify-center align-center",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": "slot",
      "$text$": null,
    },
  ],
  "$elm$": null,
  "$flags$": 0,
  "$key$": null,
  "$name$": null,
  "$tag$": Object {},
  "$text$": null,
}
`;

exports[`EvbButtonBar should render 1`] = `
Object {
  "$attrs$": Object {
    "class": "justify-left align-center",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": "slot",
      "$text$": null,
    },
  ],
  "$elm$": null,
  "$flags$": 0,
  "$key$": null,
  "$name$": null,
  "$tag$": Object {},
  "$text$": null,
}
`;
